Style fixes for body X overflow

--- a/template/sources/frontend/template/template.css
+++ b/template/sources/frontend/template/template.css
@@ -73,7 +73,6 @@ div, body, html {
 
 [text], [button], [input], p, button, input, div, body, html {
     line-height: 100%;
-    min-width: fit-content;
     min-height: fit-content;
 }
 
